cluster/gitops/data/postgresql/cloudnative-pg/netpol.yaml
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/datreeio/CRDs-catalog/main/cilium.io/ciliumnetworkpolicy_v2.json
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: cloudnative-pg
specs:
  - description: cloudnative-pg
    endpointSelector:
      matchLabels:
        app.kubernetes.io/name: cloudnative-pg
        app.kubernetes.io/instance: cloudnative-pg
    egress:
      # DNS resolution
      - toEndpoints:
          - matchLabels:
              io.kubernetes.pod.namespace: networking
              endpoints.netpols.home.arpa/cluster-dns: "true"
        toPorts:
          - ports:
              - port: "53"
                protocol: UDP
              - port: "53"
                protocol: TCP
            rules:
              dns:
                - matchPattern: "*"
      # k8s resource management
      - toEntities:
          - kube-apiserver
        toPorts:
          - ports:
              - port: "6443"
                protocol: TCP
      # Instance management
      - toEndpoints:
          - matchExpressions:
              - key: io.kubernetes.pod.namespace
                operator: Exists
              - key: cnpg.io/podRole
                operator: In
                values:
                  - instance
        toPorts:
          - ports:
              - port: status
                protocol: TCP
    ingress:
      # Kubelet to webhook for healthcheck
      - fromEntities:
          - host
        toPorts:
          - ports:
              - port: webhook-server
                protocol: TCP
      # Webhook calls
      - fromEntities:
          - kube-apiserver
        toPorts:
          - ports:
              - port: webhook-server
                protocol: TCP
      # Metrics
      - fromEndpoints:
          - matchLabels:
              io.kubernetes.pod.namespace: monitoring
              endpoints.netpols.home.arpa/metrics-scraper: "true"
        toPorts:
          - ports:
              - port: metrics
                protocol: TCP
